--- a/composer.json
+++ b/composer.json
@@ -6,6 +6,7 @@
     "type": "project",
     "require": {
         "php": "^8.1",
+        "guzzlehttp/guzzle": "^7.9",
         "illuminate/events": "^10.48",
         "illuminate/filesystem": "^10.48",
         "illuminate/view": "^10.48",
